--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Piotr Stefański
 
 # Short bio or description (displayed in the header)
-description: Agilist
+description: Agile software enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,15 +18,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: piotr.stefanski@wp.pl
+  facebook: piotr.stefanski.796
   flickr:
-  github: barryclark/jekyll-now
+  github: p-stefanski
   instagram:
-  linkedin:
+  linkedin: piotrstefanski
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: piotrstefanski
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
