--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: piotr.stefanski@wp.pl
   facebook: piotr.stefanski.796
   flickr:
-  github: p-stefanski
+  github:
   instagram:
   linkedin: piotrstefanski
   pinterest:
