--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Piotr Stefański
 description: Agile software enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/p-stefanski/p-stefanski.github.io/blob/master/images/p-stefanski-stamp.png
 
 #
 # Flags below are optional
